--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prod": "rm -rf .next && next lint && prisma generate && next build && next start"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-dialog": "1.1.5",
     "@radix-ui/react-menubar": "1.1.5",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
