--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "prod": "rm -rf .next && next lint && prisma generate && next build && next start"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-dialog": "1.1.5",
     "@radix-ui/react-menubar": "1.1.5",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "1.1.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "jotai": "^2.11.2",
@@ -23,7 +23,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwind-merge": "2.6.0",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/node": "20",
