--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-icons": "5.4.0",
     "tailwind-merge": "2.6.0",
     "tailwindcss-animate": "1.0.7",
-    "typewriter-effect": "^2.21.0"
+    "typewriter-effect": "2.21.0"
   },
   "devDependencies": {
     "@types/node": "20",
