--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "prod": "rm -rf .next && next lint && prisma generate && next build && next start"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.10.0",
+    "@hookform/resolvers": "3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-dialog": "1.1.5",
-    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-label": "2.1.2",
     "@radix-ui/react-menubar": "1.1.5",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "1.1.2",
     "@radix-ui/react-tabs": "1.1.2",
     "@radix-ui/react-tooltip": "1.1.7",
     "class-variance-authority": "0.7.1",
@@ -26,12 +26,12 @@
     "next-themes": "0.4.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "7.54.2",
     "react-icons": "5.4.0",
     "tailwind-merge": "2.6.0",
     "tailwindcss-animate": "1.0.7",
     "typewriter-effect": "2.21.0",
-    "zod": "^3.24.1"
+    "zod": "3.24.1"
   },
   "devDependencies": {
     "@types/node": "20",
